[fix] z-index on dragged element, drag direction not blocked and custom dimension can now be saved

--- a/src/components/iSee/question/toolkit/InputForm.less
+++ b/src/components/iSee/question/toolkit/InputForm.less
@@ -1,9 +1,8 @@
-.RadioForm-Add {
+.InputForm-Add {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 4px;
-  margin-left: 4px;
 
   & > * {
     padding-right: 8px;
@@ -14,10 +13,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
   padding: 4px 0;
   cursor: text;
-
-  & .radio-holder {
+  & .input-holder {
     display: block;
     margin: 0;
     font-size: 0;
@@ -27,7 +26,9 @@
 
 &.react-draggable-dragging,
 .container:hover {
-  & > .radio-holder {
+  position: relative;
+  background: white;
+  & .input-holder {
     margin: 0 0.2rem 0 0;
     font-size: 1rem;
   }
